example/src/snapshots/rust_sitter_example__handles__tests__failed_parses-2.snap
---
source: example/src/handles.rs
expression: "grammar::parse(\"1 - 2 -\")"
---
Err(
    [
        ParseError {
            reason: MissingToken(
                "Literal_Number_0",
            ),
            start: 7,
            end: 7,
        },
    ],
)
