example/src/snapshots/rust_sitter_example__handles__tests__failed_parses-3.snap
---
source: example/src/handles.rs
expression: "grammar::parse(\"a1\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [
                    ParseError {
                        reason: UnexpectedToken(
                            "a",
                        ),
                        start: 0,
                        end: 1,
                    },
                ],
            ),
            start: 0,
            end: 1,
        },
    ],
)
