example/src/snapshots/rust_sitter_example__handles__tests__failed_parses-4.snap
---
source: example/src/handles.rs
expression: "grammar::parse(\"1a\")"
---
Err(
    [
        ParseError {
            reason: FailedNode(
                [
                    ParseError {
                        reason: UnexpectedToken(
                            "a",
                        ),
                        start: 1,
                        end: 2,
                    },
                ],
            ),
            start: 1,
            end: 2,
        },
    ],
)
